--- a/PortfolioAce/Views/Modals/AddTradeWindow.xaml
+++ b/PortfolioAce/Views/Modals/AddTradeWindow.xaml
@@ -3,9 +3,23 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:acb="http://wpfcontrols.com/"
+        xmlns:providers="clr-namespace:PortfolioAce.Models.Providers"
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
         mc:Ignorable="d"
         Title="Create a New Trade" Height="500" Width="410">
+    <Window.Resources>
+        <providers:SecuritySuggestionProvider x:Key="SecuritySuggestionProvider"/>
+        <DataTemplate x:Key="SecurityTemplate">
+            <Grid>
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{Binding Path=Symbol}"/>
+                    <TextBlock Text="{Binding Path=SecurityName}" FontSize="10"/>
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+        <TextBlock x:Key="LoadingContent" Text="Loading..." Margin="5" FontSize="14" />
+    </Window.Resources>
     <Border Background="GhostWhite" BorderBrush="Silver" BorderThickness="1" CornerRadius="8,8,3,3" Margin="3">
         <Grid Margin="1">
             <Grid.Resources>
@@ -96,7 +110,19 @@
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-            <Button Command="{Binding AddTradeCommand}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}" Content="Add Trade" Style="{DynamicResource MaterialDesignFlatMidBgButton}"/> 
+            <Button Command="{Binding AddTradeCommand}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}" Content="Add Trade" Style="{DynamicResource MaterialDesignFlatMidBgButton}"/>
+            <acb:AutoCompleteTextBox HorizontalAlignment="Stretch" Grid.Row="12" Grid.Column="0"
+                                                 MaxLength="50"
+                                                 CharacterCasing="Upper"
+                                                 DisplayMember="Name"
+                                                 Height="26"
+                                                 Margin="0,0,6,0"
+                                                 Provider="{StaticResource ResourceKey=SecuritySuggestionProvider}"
+                                                 ItemTemplate="{StaticResource ResourceKey=SecurityTemplate}"
+                                                 LoadingContent="{StaticResource LoadingContent}"
+                                                 SelectedItem="{Binding Symbol, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                                 Watermark="Select a security">
+            </acb:AutoCompleteTextBox>
         </Grid>
     </Border>
 
