--- a/PortfolioAce/Views/Modals/AddTradeWindow.xaml
+++ b/PortfolioAce/Views/Modals/AddTradeWindow.xaml
@@ -8,15 +8,17 @@
         xmlns:providers="clr-namespace:PortfolioAce.Models.Providers"
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
         mc:Ignorable="d"
-        Title="Create a New Trade" Height="500" Width="410">
+        Title="Create a New Trade" Height="500" Width="450">
     <Window.Resources>
         <src:ProviderWithParameterConverter x:Key="ProviderWithParameterConverter"/>
         <!--<providers:SecuritySuggestionProvider x:Key="SecuritySuggestionProvider"/>-->
         <DataTemplate x:Key="SecurityTemplate">
             <Grid>
                 <StackPanel Orientation="Vertical">
-                    <TextBlock Text="{Binding Path=Symbol}"/>
+                    <TextBlock Text="{Binding Path=Symbol}" FontWeight="Bold"/>
                     <TextBlock Text="{Binding Path=SecurityName}" FontSize="10"/>
+                    <TextBlock Text="{Binding Path=AssetClass.Name}" FontSize="10"/>
+                    <Separator/>
                 </StackPanel>
             </Grid>
         </DataTemplate>
@@ -88,8 +90,15 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
             <Label Grid.Row="2">Symbol:</Label>
-            <TextBox Text="{Binding Symbol, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
-            <Label Grid.Row="2" Grid.Column="2" Content="{Binding SecurityName, UpdateSourceTrigger=PropertyChanged}"/>
+            <acb:AutoCompleteTextBox HorizontalAlignment="Stretch" Grid.Row="2" Grid.Column="1" CharacterCasing="Upper" DisplayMember="Symbol"  
+                                                 Margin="0,0,0,2"
+                                                 Provider="{Binding SecuritiesList, Converter={StaticResource ProviderWithParameterConverter}}"
+                                                 ItemTemplate="{StaticResource ResourceKey=SecurityTemplate}"
+                                                 LoadingContent="{StaticResource LoadingContent}"
+                                                 SelectedItem="{Binding SelectedSecurity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                                 Watermark="Enter a ticker symbol">
+            </acb:AutoCompleteTextBox>
+            <Label Grid.Row="2" Grid.Column="2" Content="{Binding SelectedSecurity.SecurityName, UpdateSourceTrigger=PropertyChanged}" FontWeight="Bold"/>
             <Label Grid.Row="3">Quantity:</Label>
             <TextBox Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
             <Label Grid.Row="4">Price:</Label>
@@ -113,18 +122,6 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
             <Button Command="{Binding AddTradeCommand}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}" Content="Add Trade" Style="{DynamicResource MaterialDesignFlatMidBgButton}"/>
-            <acb:AutoCompleteTextBox HorizontalAlignment="Stretch" Grid.Row="12" Grid.Column="0"
-                                                 MaxLength="50"
-                                                 CharacterCasing="Upper"
-                                                 DisplayMember="Name"
-                                                 Height="26"
-                                                 Margin="0,0,6,0"
-                                                 Provider="{Binding SecuritiesList, Converter={StaticResource ProviderWithParameterConverter}}"
-                                                 ItemTemplate="{StaticResource ResourceKey=SecurityTemplate}"
-                                                 LoadingContent="{StaticResource LoadingContent}"
-                                                 SelectedItem="{Binding Symbol, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                                                 Watermark="Select a security">
-            </acb:AutoCompleteTextBox>
         </Grid>
     </Border>
 
