implement country and language providers

--- a/PortfolioAce/Views/Modals/InvestorManagerWindow.xaml
+++ b/PortfolioAce/Views/Modals/InvestorManagerWindow.xaml
@@ -2,10 +2,34 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:acb="http://wpfcontrols.com/"
+        xmlns:providers="clr-namespace:PortfolioAce.Models.Providers"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
         mc:Ignorable="d"
         Title="Client Manager" Height="425" Width="575" MaxHeight="425" MaxWidth="575">
+    <Window.Resources>
+        <providers:CountrySuggestionProvider x:Key="CountrySuggestionProvider"/>
+        <providers:LanguageSuggestionProvider x:Key="LanguageSuggestionProvider"/>
+        <DataTemplate x:Key="CountryTemplate">
+            <Grid>
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{Binding Path=EnglishName}" FontWeight="Bold"/>
+                    <TextBlock Text="{Binding Path=TwoLetterISORegionName}" FontSize="10"/>
+                    <Separator/>
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="LanguageTemplate">
+            <Grid>
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{Binding }" FontWeight="Bold"/>
+                    <Separator/>
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+        <TextBlock x:Key="LoadingContent" Text="Loading..." Margin="5" FontSize="14" />
+    </Window.Resources>
     <Border Background="GhostWhite" BorderBrush="Silver" BorderThickness="1" CornerRadius="8,8,3,3" Margin="3">
         <TabControl  Style="{StaticResource MaterialDesignTabControl}" Background="LightGray">
             <TabItem Header="New Investor Details">
@@ -67,15 +91,27 @@
                     <Label Grid.Row="2">Date of Birth:</Label>
                     <DatePicker Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedDate="{Binding Path=BirthDate, UpdateSourceTrigger=PropertyChanged}"/>
                     <Label Grid.Row="3">Domicile:</Label>
-                    <TextBox Text="{Binding DomicileCountry, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
+                    <acb:AutoCompleteTextBox HorizontalAlignment="Stretch" Grid.Row="3" Grid.Column="1" CharacterCasing="Upper" DisplayMember="EnglishName"
+                                                 Margin="0,0,0,2"
+                                                 Provider="{StaticResource ResourceKey=CountrySuggestionProvider}"
+                                                 ItemTemplate="{StaticResource ResourceKey=CountryTemplate}"
+                                                 LoadingContent="{StaticResource LoadingContent}"
+                                                 SelectedItem="{Binding Domicile, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}">
+                    </acb:AutoCompleteTextBox>
                     <Label Grid.Row="4">Email:</Label>
                     <TextBox Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
                     <Label Grid.Row="5">Mobile Number:</Label>
                     <TextBox Text="{Binding MobileNumber, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
                     <Label Grid.Row="6">Native Language</Label>
-                    <TextBox Text="{Binding NativeLanguage, UpdateSourceTrigger=PropertyChanged}" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
+                    <acb:AutoCompleteTextBox HorizontalAlignment="Stretch" Grid.Row="6" Grid.Column="1" CharacterCasing="Upper"
+                                                 Margin="0,0,0,2"
+                                                 Provider="{StaticResource ResourceKey=LanguageSuggestionProvider}"
+                                                 ItemTemplate="{StaticResource ResourceKey=LanguageTemplate}"
+                                                 LoadingContent="{StaticResource LoadingContent}"
+                                                 SelectedItem="{Binding NativeLanguage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}">
+                    </acb:AutoCompleteTextBox>
                     <Button Command="{Binding AddInvestorCommand}" Grid.Row="7" Grid.Column="1" Margin="0,10,0,0" 
-                            Style="{DynamicResource MaterialDesignFlatMidBgButton}" IsEnabled="{Binding CanCreate}" Content="Add Investor"/> 
+                            Style="{DynamicResource MaterialDesignFlatMidBgButton}" IsEnabled="{Binding CanCreate}" Content="Add Investor"/>
                 </Grid>
             </TabItem>
             <TabItem Header="All Investors">
@@ -162,17 +198,6 @@
                             </Border>
                         </Grid>
                     </DockPanel>
-                    <!--
-                    <StackPanel Grid.Row="0" Grid.Column="1">
-                        <Label Content="{Binding InvestorProfile, UpdateSourceTrigger=PropertyChanged}"/>
-                        <Label Content="{Binding SelectedInvestor.BirthDate, StringFormat={}{0:dd/MM/yyyy}}"/>
-                        <Label Content="{Binding SelectedInvestor.FullName}"/>
-                        <Label Content="{Binding SelectedInvestor.Domicile}"/>
-                        <Label Content="{Binding SelectedInvestor.Email}"/>
-                        <Label Content="{Binding SelectedInvestor.MobileNumber}"/>
-                        <Label Content="{Binding SelectedInvestor.NativeLanguage}"/>
-                    </StackPanel>
-                    -->
                 </Grid>
             </TabItem>
         </TabControl>
