--- a/PortfolioAce/Views/Windows/ImportDataToolWindow.xaml
+++ b/PortfolioAce/Views/Windows/ImportDataToolWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="PortfolioAce.Views.Windows.ImportTradesWindow"
+﻿<Window x:Class="PortfolioAce.Views.Windows.ImportDataToolWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PortfolioAce.Views.Windows"
         mc:Ignorable="d"
-        Title="Import Trades" Height="240" Width="320">
+        Title="Data Import Tool" Height="540" Width="500">
     <Grid>
         
     </Grid>
