--- a/PortfolioAce/Views/Windows/ImportDataToolWindow.xaml
+++ b/PortfolioAce/Views/Windows/ImportDataToolWindow.xaml
@@ -3,9 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:src="clr-namespace:PortfolioAce.Models"
         xmlns:local="clr-namespace:PortfolioAce.Views.Windows"
         mc:Ignorable="d"
         Title="Data Import Tool" Height="500" Width="600">
+    <Window.Resources>
+        <src:FileDragDropHelper x:Key="FileDragDropHelper"/>
+    </Window.Resources>
     <Grid Margin="3">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -23,11 +27,13 @@
             <TextBox Text="Hidden Leaf Fund"  FontSize="20" FontWeight="Bold"/>
             <Label Content="HLF" FontSize="20" FontWeight="Bold"/>
             <!--Combobox user can load Transactions, securities, prices, What Are you loading?-->
-            <ComboBox FontSize="18" FontWeight="Bold"/>
+            <ComboBox FontSize="18" FontWeight="Bold"/> <!--Dont forget to include a tooltip for this.-->
         </StackPanel>
         <Label Content="{Binding CurrentFileDescription, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Bottom" Margin="10,0,0,0" />
         <Border Grid.Column="0" Grid.Row="1" Background="#fafafa" Grid.ColumnSpan="3" AllowDrop="True" 
-                Grid.RowSpan="2" Margin="10" BorderThickness="3" CornerRadius="10">
+                Grid.RowSpan="2" Margin="10" BorderThickness="3" CornerRadius="10"
+                src:FileDragDropHelper.IsFileDragDropEnabled="True" src:FileDragDropHelper.FileDragDropTarget="{Binding}"
+                >
             <Border.BorderBrush>
                 <VisualBrush>
                     <VisualBrush.Visual>
