--- a/PortfolioAce/Views/Windows/ImportDataToolWindow.xaml
+++ b/PortfolioAce/Views/Windows/ImportDataToolWindow.xaml
@@ -57,7 +57,22 @@
                 </ComboBox.ToolTip>
             </ComboBox>
         </StackPanel>
-        <Label Content="{Binding CurrentFileDescription, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Bottom" Margin="10,0,0,0" />
+        <StackPanel Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Bottom" Margin="10,0,0,0" >
+            <Label Content="{Binding CurrentFileDescription, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,5" />
+            <Button Width="100" FontSize="12" Content="Read CSV" Margin="1" HorizontalAlignment="Left" IsEnabled="{Binding LoadButtonEnabled}">
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding ShowLoadButton,UpdateSourceTrigger=PropertyChanged}"
+                         Value="true">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
+        </StackPanel>
         <Border Grid.Column="0" Grid.Row="1" Background="#fafafa" Grid.ColumnSpan="3" AllowDrop="True" 
                 Grid.RowSpan="2" Margin="10" BorderThickness="3" CornerRadius="10"
                 src:FileDragDropHelper.IsFileDragDropEnabled="True" src:FileDragDropHelper.FileDragDropTarget="{Binding}"
