--- a/PortfolioAce/Views/Windows/ImportDataToolWindow.xaml
+++ b/PortfolioAce/Views/Windows/ImportDataToolWindow.xaml
@@ -108,10 +108,21 @@
             </StackPanel>
         </Border>
         <DataGrid Name="TransactionsDataGrid" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="3" RowBackground="White" AlternatingRowBackground="#e8ffec" Margin="3"
-                  VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False">
+                  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Transactions"/>
+                <DataGridTextColumn Header="Transaction Type"/>
+                <DataGridTextColumn Header="Security Symbol"/>
+                <DataGridTextColumn Header="Quantity"/>
+                <DataGridTextColumn Header="Price"/>
+                <DataGridTextColumn Header="TradeDate"/>
+                <DataGridTextColumn Header="SettleDate"/>
+                <DataGridTextColumn Header="Fees"/>
+                <DataGridTextColumn Header="Currency"/>
+                <DataGridTextColumn Header="Custodian"/>
+                <DataGridTextColumn Header="Fund"/>
+                <DataGridTextColumn Header="Comment"/>
             </DataGrid.Columns>
+
             <DataGrid.Style>
                 <Style TargetType="DataGrid">
                     <Setter Property="Visibility" Value="Collapsed"/>
@@ -127,7 +138,11 @@
         <DataGrid Name="PricesDataGrid" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="3" RowBackground="White" AlternatingRowBackground="#e8ffec" Margin="3"
                   VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Prices"/>
+                <DataGridTextColumn Header="Security Symbol"/>
+                <DataGridTextColumn Header="Date"/>
+                <DataGridTextColumn Header="Close Price"/>
+                <!-- The price source will be set to manual automatically -->
+                <DataGridTextColumn Header="Price Source"/>
             </DataGrid.Columns>
             <DataGrid.Style>
                 <Style TargetType="DataGrid">
@@ -144,7 +159,13 @@
         <DataGrid Name="SecuritiesDataGrid" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="3" RowBackground="White" AlternatingRowBackground="#e8ffec" Margin="3"
                   VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Securities"/>
+                <DataGridTextColumn Header="Asset Class"/>
+                <DataGridTextColumn Header="Name"/>
+                <DataGridTextColumn Header="Symbol"/>
+                <DataGridTextColumn Header="Currency"/>
+                <DataGridTextColumn Header="ISIN"/>
+                <DataGridTextColumn Header="AV Symbol"/>
+                <DataGridTextColumn Header="FMP Symbol"/>
             </DataGrid.Columns>
             <DataGrid.Style>
                 <Style TargetType="DataGrid">
